vite-project/src/Ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - host: my-app-example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-app
            port:
              number: 3000
  - host: node.example.com
    http:
      paths:
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: node-app
            port:
              number: 3200
